Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-1743

traffic_logstats is completely broken

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 3.3.1
    • Logging
    • None

    Description

      When running traffic_logstats on trunk, it does not aggregate properly per origin. Instead it reports e.g.

                                     Traffic summary
      
      Origin Server                               Hits         Misses         Errors
      ------------------------------------------------------------------------------
      www.yahoo.com                                  0              2              0
      www.ogre.com                                   0              2              0
      www.ogre.com                                   0              1              0
      www.ogre.com                                   0              1              0
      www.cisco.com                                  0              1              0
      www.cisco.com                                  0              1              0
      www.ogre.com                                   0              1              0
      www.ogre.com                                   0              1              0
      www.ogre.com                                   0              1              0
      www.yahoo.com                                  0              1              0
      www.yahoo.com                                  0              1              0
      www.google.com                                 0              1              0
      www.ogre.com                                   0              1              0
      www.ogre.com                                   0              1              0
      www.ogre.com                                   0              1              0
      www.ogre.com                                   0              1              0
      www.yahoo.com                                  0              1              0
      

      Note how the same domain is repeated more than once (it should only show up once each).

      Attachments

        Activity

          People

            Unassigned Unassigned
            zwoop Leif Hedstrom
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: