TS-1743 Implement our own hash mechanism for traffic_logstats, since C++11 does not provide a sensical hash<const char*>. Thanks amc and PSUdaemon for saving the day.