proxy/logstats.cc
@@ -71,16 +71,6 @@
 #if defined(__GNUC__)
 using __gnu_cxx::hash_map;
 using __gnu_cxx::hash_set;
-
-// GCC 4.7 appears to want the std::hash implementation from <functional>, whereas previous gcc versions
-// use the __gnu_cxx::hash GNU extension. Clang (at least on OS X) is happy with the GNU extension as long
-// as it is using the GNU libstdc++.
-#if (__GNUC__ >= 4 && __GNUC_MINOR__ >= 7)
-using std::hash;
-#else
-using __gnu_cxx::hash;
-#endif
-
 #endif
 
 using namespace std;
@@ -119,13 +109,6 @@ const int RSSp_AS_INT = 728986482;      // For "RSS+"
 const int PLAI_AS_INT = 1767992432;     // For "plain"
 const int IMAG_AS_INT = 1734438249;     // For "image"
 const int HTTP_AS_INT = 1886680168;     // For "http" followed by "s://" or "://"
-
-/*
-#include <stdio.h>
-int main(int argc, char** argv) {
-  printf("%s is %d\n", argv[1], *((int*)argv[1]));
-}
-*/
 
 // Store our "state" (position in log file etc.)
 struct LastState
@@ -361,8 +344,24 @@ struct eqstr
   }
 };
 
-typedef hash_map <const char *, OriginStats *, hash <const char *>, eqstr> OriginStorage;
-typedef hash_set <const char *, hash <const char *>, eqstr> OriginSet;
+struct hash_fnv32 {
+  inline uint32_t operator()(const char* s) const 
+  {
+    uint32_t hval = (uint32_t)0x811c9dc5; /* FNV1_32_INIT */
+
+    if (s) {
+      while (*s) {
+        hval ^= (uint32_t)*s++;
+        hval *= (uint32_t)0x01000193;  /* FNV_32_PRIME */
+      }
+    }
+
+    return hval;
+  }
+};
+
+typedef hash_map <const char *, OriginStats *, hash_fnv32, eqstr> OriginStorage;
+typedef hash_set <const char *, hash_fnv32, eqstr> OriginSet;
 
 
 // LRU class for the URL data
